2009-01-13  Mark Ellis <mark@mpellis.org.uk>

	* 0.2.1 release
	* configure.ac.in - fixed some less portable conditionals

2009-01-10  Mark Ellis <mark@mpellis.org.uk>

	* 0.2 release

2009-01-09  Mark Ellis <mark@mpellis.org.uk>

	* rework the build system, now require appropriate gvfs source
	  files rather than a built tree, make dist can include gvfs
	  files or not, depending on configure options

2009-01-03  Mark Ellis <mark@mpellis.org.uk>

	* daemon/gvfsbackendsynce.c - change wstr_*_current to _utf8

2008-12-21  Mark Ellis <mark@mpellis.org.uk>

	* only update mime database when installing directly

2008-12-19  Mark Ellis <mark@mpellis.org.uk>

	* added mime type description for Pocket Word & Excel

2008-10-28  Mark Ellis <mark@mpellis.org.uk>

	* use CeGetDiskFreeSpaceEx() to obtain space details
	  for non main storage

2008-10-22  Mark Ellis <mark@mpellis.org.uk>

	* change make-dist files for gvfs-1.0.2

2008-07-07  Mark Ellis <mark@mpellis.org.uk>

	* remove error code that is now present in libsynce

2008-06-03  Mark Ellis <mark@mpellis.org.uk>

	* added po/ChangeLog
	* added po to root Makefile.am
	* added hack to build self contained source package

2008-05-14  Mark Ellis <mark@mpellis.org.uk>

	* check for alternative media card names
	* change to above - no longer check names, look for TEMPORARY
	  attribute on directories in root for attached file systems

2008-04-29  Mark Ellis <mark@mpellis.org.uk>

	* made max_log_level global

2008-04-22  Mark Ellis <mark@mpellis.org.uk>

	* uncommented all uses of CeFindClose(), enclosed in #if instead
	* set owner on 'special' directories
	* made various jobs cancellable

2008-04-21  Mark Ellis <mark@mpellis.org.uk>

	* commented out all uses of CeFindClose(), not implemented
	  yet in rapi2
	* removed unnecessary use of variable open modes
	* fixed move and rename functions

2008-04-18  Mark Ellis <mark@mpellis.org.uk>

	* added etags
	* set all files to be owned by the user
	* close opened find handles